minor fixes to skills scrollbar

--- a/app/src/components/Skills.module.scss
+++ b/app/src/components/Skills.module.scss
@@ -1,3 +1,5 @@
+@import "../colors";
+
 .skillsContainer {
     display: flex;
     align-items: center;
@@ -8,12 +10,14 @@
     border: none;
     font-size: 2rem;
     cursor: pointer;
+    color: $text-color;
 }
 
 .skillsContent {
     overflow-x: auto;
     white-space: nowrap;
     width: calc(100% - 4rem);
+    scrollbar-width: none;
 }
 
 .skillsList {
